; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_config_buf_fgetc.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_config_buf_fgetc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_source = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, i64, i32* }

@EOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.config_source*)* @config_buf_fgetc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @config_buf_fgetc(%struct.config_source* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.config_source*, align 8
  store %struct.config_source* %0, %struct.config_source** %3, align 8
  %4 = load %struct.config_source*, %struct.config_source** %3, align 8
  %5 = getelementptr inbounds %struct.config_source, %struct.config_source* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.config_source*, %struct.config_source** %3, align 8
  %10 = getelementptr inbounds %struct.config_source, %struct.config_source* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = icmp slt i64 %8, %13
  br i1 %14, label %15, label %29

15:                                               ; preds = %1
  %16 = load %struct.config_source*, %struct.config_source** %3, align 8
  %17 = getelementptr inbounds %struct.config_source, %struct.config_source* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 2
  %20 = load i32*, i32** %19, align 8
  %21 = load %struct.config_source*, %struct.config_source** %3, align 8
  %22 = getelementptr inbounds %struct.config_source, %struct.config_source* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = add nsw i64 %25, 1
  store i64 %26, i64* %24, align 8
  %27 = getelementptr inbounds i32, i32* %20, i64 %25
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* %2, align 4
  br label %31

29:                                               ; preds = %1
  %30 = load i32, i32* @EOF, align 4
  store i32 %30, i32* %2, align 4
  br label %31

31:                                               ; preds = %29, %15
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
